Show the API results using views

--- a/django-app/gauth/templates/api.html
+++ b/django-app/gauth/templates/api.html
@@ -9,7 +9,7 @@
 <body>
 
 <div>
-    <h3>Credentials</h3>
+    <h3>{{api}}</h3>
     <div style="white-space: pre-wrap; font-family: 'Courier New', Helvetica, sans-serif;"
     >{{ credentials }}</div>
 </div>
