Called the gdriver API for listing folders

--- a/django-app/gauth/templates/index.html
+++ b/django-app/gauth/templates/index.html
@@ -14,7 +14,7 @@
         {% if not status %}
         <a href="/gmailAuthenticate" onclick="gmailAuthenticate()" title="Google">Google</a>
         {% else %}
-        <p>Your are verified</p>
+        <p>Your are verified {{user}}</p>
         {% endif %}
     </div>
 
