The redirect for unauthorized is working fine after the Google Authentication

--- a/django-app/gauth/templates/api.html
+++ b/django-app/gauth/templates/api.html
@@ -11,7 +11,7 @@
 <div>
     <h3>{{api}}</h3>
     <div style="white-space: pre-wrap; font-family: 'Courier New', Helvetica, sans-serif;"
-    >{{ credentials }}</div>
+    >{{ response }}</div>
 </div>
 </body>
 </html>
